Java 8 compatibility
Signed-off-by: Olivier Marceau <hollysaiqs@marceau.ovh>